--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,10 @@
 $font: 'NT Somic', Arial, Helvetica, sans-serif
 $std-size: 1.6rem
 
+$desktop: 1350px
+$tablet: 1024px
+$mobile: 840px
+
 $black: #0A0A0A
 $black-light: #202020
 $grey: #B6B6B6
@@ -41,58 +45,119 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size: 6rem
-  line-height: 6rem
+  line-height: 100%
 
 h2
   font-size: 4rem
-  line-height: 4rem
+  line-height: 100%
 
 h3
   font-size: 2.8rem
-  line-height: 2.8rem
+  line-height: 100%
 
 h4
   font-size: 1.6rem
-  line-height: 1.6rem
+  line-height: 100%
 
 h5
   font-size: 1.4rem
-  line-height: 1.4rem
+  line-height: 100%
 
 h6
   font-size: 1.2rem
-  line-height: 1.2rem
+  line-height: 100%
 
 .header, .main, .footer
   width: 100%
+
+.header__top, .header__bottom, .categories__tiles, .hero__container, .brands, .sets, .utp, .footer__navigation, .footer__credentials, .suggestions__container
+  padding: 0 1.5rem
 
 .header__top
   background-color: $black-light
   color: $grey1
 
+  @media screen and (max-width: $mobile)
+    display: none
+
+.header__mobile
+  display: none
+
+  @media screen and (max-width: $mobile)
+    padding: 1.2rem 1.5rem
+    display: grid
+    grid-template-columns: 4.4rem 4.4rem auto 4.4rem 4.4rem
+    justify-items: center
+    align-items: center
+    gap: 0.4rem
+    background-color: $black
+
+    .header__mobile__item
+      padding: 1.2rem
+
+    .header__mobile__item__icon
+      display: block
+      width: 2rem
+      height: 2rem
+      cursor: pointer
+
+    .header__mobile__item--logo
+      justify-self: center
+      align-self: center
+
+    .header__mobile__item__logo
+      display: block
+
+    .header__mobile__item__logo__image
+      width: 10rem
+      height: 5rem
+
+.icon--search-white
+  background-image: url(../images/icons/search-white.svg)
+  background-size: cover
+
+.icon--heart-white
+  background-image: url(../images/icons/heart-white.svg)
+  background-size: cover
+
+.icon--cart-white
+  background-image: url(../images/icons/cart-white.svg)
+  background-size: cover
+
+.icon--nav-white
+  background-image: url(../images/icons/nav-white.svg)
+  background-size: cover
+
+
 .header__top__container,
 .header__bottom__container,
-// .banner__container,
 .banner__container__item__content,
 .categories__tiles,
 .hero__container,
-// .brands__list,
 .suggestions__container,
 .sets,
 .utp,
 .footer__navigation,
 .footer__credentials
-  max-width: 135rem
+  max-width: 138rem
   margin: 0 auto
   
 .header__top__container
   display: flex
+  gap: 3rem
   justify-content: space-between
 
 .header__top__container__menu, .header__top__container__getintouch
   display: flex
   gap: 4rem
   padding: 0.8rem 0
+
+.header__top__container__getintouch__item
+  text-wrap: nowrap
+
+.header__top__container__menu__item, .header__top__container__getintouch__item
+  font-size: 1.4rem
+  line-height: 130%
 
 .header__top__container__menu__item__link, 
 .header__top__container__getintouch__item__city, 
@@ -130,6 +195,9 @@ h6
 .header__bottom
   background-color: $black
 
+  @media screen and (max-width: $mobile)
+    display: none
+
 .header__bottom__container
   display: grid
   grid-template-columns: 1fr 1fr 1fr
@@ -152,7 +220,7 @@ h6
   padding: 1rem 1.8rem 1rem 1.8 + 1.6 + 0.5rem
   color: $white
   background-color: $pink
-  background-image: url("../images/icons/nav.svg")
+  background-image: url("../images/icons/nav-white.svg")
   background-position: 1rem center
   background-repeat: no-repeat
   background-size: 1.6rem 1.6rem
@@ -241,16 +309,23 @@ h6
   right: 0
   margin-left: auto
   margin-right: auto
-  max-width: 135rem
+  max-width: 138rem
   height: 45rem
+
+  @media screen and (max-width: $mobile)
+    display: none
   
 .banner__nav_buttons-next
   background-image: url("../images/icons/arrow-right.svg")
+  background-size: cover
+  background-repeat: no-repeat
   right: var(--swiper-navigation-sides-offset, 1rem)
   left: auto
 
 .banner__nav_buttons-prev
   background-image: url("../images/icons/arrow-left.svg")
+  background-size: cover
+  background-repeat: no-repeat
   left: var(--swiper-navigation-sides-offset, 1rem)
   right: auto
 
@@ -324,50 +399,104 @@ h6
 .categories
   padding: 6rem 0
 
+  @media screen and (max-width: $mobile)
+    padding: 2rem 0
+
 .categories__tiles
   margin: 0 auto
-  display: flex
-  flex-wrap: wrap
+  // display: flex
+  // flex-wrap: wrap
+  display: grid
+  grid-template-columns: repeat(5, 1fr)
   gap: 1rem
 
+  @media screen and (max-width: $mobile)
+    grid-template-columns: repeat(2, 1fr)
+
 .categories__tiles__item
-  width: 26.2rem
-  height: 34rem
+  // width: 26.2rem
+  // height: 34rem
   background-color: $grey1
   border-radius: 0.4rem
 
   &:hover
     background-image: url('../images/main-tiles/tile-bg-hover.svg')
+    background-size: cover
     color: $white
   
 .categories__tiles__item__link
-  padding: 2rem
+  padding: 2rem 2rem 0 2rem
   display: grid
-  grid: 20.5rem 6.8rem / 1fr
+  // grid: 20.5rem 6.8rem / 1fr
+  grid: 3fr 2fr / auto
   gap: 2rem
   width: 100%
   height: 100%
+
+  @media screen and (max-width: $tablet)
+    padding: 1.6rem
+    display: block
+
+  @media screen and (max-width: $mobile)
+    gap: 1rem
 
 .categories__tiles__item__link__image
   display: block
   padding: 0.8rem
 
+  @media screen and (max-width: $mobile)
+    margin: auto
+
 .categories__tiles__item__link__text
   margin: auto
+  padding-bottom: 2rem
   display: block
   font-size: 1.8rem
   font-weight: 500
-  line-height: 2.5rem
+  line-height: 140%
   text-align: center
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
+    line-height: 130%
+    padding-bottom: 1.6rem
+
+  @media screen and (max-width: $mobile)
+    font-size: 1.4rem
+    line-height: 130%
+    padding-bottom: 1.6rem
+
+  // @media screen and (max-width: 1160px)
+  //   font-size: 1.4rem
+  
+  // @media screen and (max-width: 1024px)
+  //   padding-bottom: 1.6rem
+  //   font-size: 1.4rem
 
 .hero
   padding-bottom: 6rem
+
+  @media screen and (max-width: $mobile)
+    padding-bottom: 0
+
+.hero__container__image
+  display: block
+
+  @media screen and (max-width: $mobile)
+    display: none
+
+.hero__container__image-mobile
+  display: none
+
+  @media screen and (max-width: $mobile)
+    display: block
+
 
 .brands
   position: relative
   margin: 6rem auto
   width: 100%
-  max-width: 135rem
+  max-width: 138rem
   overflow-x: auto
   -ms-overflow-style: none
   scrollbar-width: none
@@ -380,6 +509,9 @@ h6
   &:hover .brands__nav_buttons__right
     display: block
 
+  @media screen and (max-width: $mobile)
+    margin: 4rem auto
+
 .brands__nav_buttons
   position: absolute
   top: 0
@@ -390,6 +522,9 @@ h6
   height: 100%
   justify-content: space-between
   z-index: 10
+
+  @media screen and (max-width: $mobile)
+    display: none
 
 .brands__nav_buttons__left
   display: none
@@ -420,6 +555,9 @@ h6
   align-items: center
   column-gap: 2rem
 
+  @media screen and (max-width: $mobile)
+    column-gap: 1rem
+
 .brands__list__item
   margin: 0
   height: 9rem
@@ -433,13 +571,6 @@ h6
 .suggestions
   margin-bottom: 6rem
 
-.suggestions__container__heading
-  display: block
-  margin-bottom: 2rem
-  font-size: 2rem
-  font-weight: 700
-  line-height: 2.6rem
-
 .suggestions__container
   position: relative
 
@@ -447,15 +578,26 @@ h6
   &:hover .suggestions__container__nav_buttons__right
     display: block
 
+.suggestions__container__heading
+  display: block
+  // padding: 1.5rem
+  margin-bottom: 2rem
+  font-size: 2rem
+  font-weight: 700
+  line-height: 2.6rem
+
 .suggestions__container__nav_buttons
   position: absolute
   top: 0
-  padding: 0 1rem
+  padding: 0 1+1.5+1.5rem 0 1rem
   display: flex
   align-items: center
   width: 100%
   height: 100%
   justify-content: space-between
+
+  @media screen and (max-width: $mobile)
+    display: none
   
 
 .suggestions__container__nav_buttons__left
@@ -483,6 +625,7 @@ h6
     opacity: 1
 
 .suggestions__container__list
+  // padding: 1.5rem
   display: flex
   position: relative
   flex-wrap: nowrap
@@ -674,6 +817,9 @@ h6
 .sets
   margin-bottom: 6rem
 
+  @media screen and (max-width: $mobile)
+    margin-bottom: 2rem
+
 .sets__heading
   display: block
   margin-bottom: 2rem
@@ -686,12 +832,17 @@ h6
   grid-template-columns: 1fr 1fr
   gap: 1rem
   border-radius: 0.4rem
+  text-transform: lowercase
+
+  @media screen and (max-width: $mobile)
+    grid-template-columns: 1fr
 
 .sets__container__item
   display: block
   position: relative
   background-color: $grey-soft
   border-radius: 0.4rem
+  overflow: hidden
 
   &:hover .sets__container__item__image
     display: none
@@ -705,11 +856,16 @@ h6
   padding: 3rem
   font-size: 4rem
   font-weight: 700
-  line-height: 4.4rem
+  line-height: 110%
   color: $white
+
+  @media screen and (max-width: $mobile)
+    padding: 2rem
+    font-size: 2.8rem
 
 .sets__container__item__image
   display: block
+  width: 100%
 
 .sets__container__item__image--hover
   display: none
@@ -717,10 +873,16 @@ h6
 .utp
   margin-bottom: 6rem
 
+  @media screen and (max-width: $mobile)
+    margin-bottom: 4rem
+
 .utp__container
   display: grid
   grid-template-columns: 1fr 1fr 1fr
   gap: 1rem
+
+  @media screen and (max-width: $mobile)
+    grid-template-columns: 1fr
 
 .utp__container__tile
   display: flex
@@ -752,7 +914,7 @@ h6
 
 .footer
   background-color: $black
-  padding: 4.8rem
+  padding: 4.8rem 0
 
 .footer__navigation
   margin-bottom: 10rem
@@ -760,6 +922,10 @@ h6
   justify-content: space-between
   color: $white
   text-transform: uppercase
+
+  @media screen and (max-width: $mobile)
+    flex-direction: column
+    gap: 4rem
 
 .footer__navigation__heading
   display: block
@@ -777,10 +943,18 @@ h6
   opacity: 0.7
   text-transform: uppercase
 
+  @media screen and (max-width: $mobile)
+    gap: 1.6rem
+
+
 .footer__navigation__catalogue__menu
   display: grid
   grid-template-columns: 1fr 1fr
   column-gap: 7rem
+
+  @media screen and (max-width: $mobile)
+    grid-template-columns: 1fr
+    gap: 1.6rem
 
 .footer__navigation__menu__link
   font-size: 1.3rem
@@ -794,11 +968,26 @@ h6
   opacity: 0.5
   text-transform: uppercase
 
+  @media screen and (max-width: $mobile)
+    flex-direction: column
+    gap: 1rem
+    justify-content: flex-start
+    font-size: 1rem
+
 .flex-left
   align-self: left
+
+  @media screen and (max-width: $mobile)
+    align-self: unset
 
 .flex-center
   align-self: center
 
+  @media screen and (max-width: $mobile)
+    align-self: unset
+
 .flex-right
   align-self: right
+
+  @media screen and (max-width: $mobile)
+    align-self: unset
