--- a/sass/style.sass
+++ b/sass/style.sass
@@ -37,7 +37,7 @@ body
   font-family: $font
   font-weight: 400
   font-size: $std-size
-  line-height: $std-size
+  line-height: 130%
   color: $black
   background-color: $white
 
@@ -211,6 +211,30 @@ h6, .h6
 
   &:hover
     background-image: url("../images/icons/cart-pink.svg")
+
+.flex_columns
+  margin-top: 3rem
+  display: flex
+  flex-direction: column
+  gap: 2.4rem
+  width: 100%
+
+.flex_columns__item
+  display: flex
+  justify-content: space-between;
+  font-size: 1.4rem
+  line-height: 130%
+
+.flex_columns__item__dots
+  min-width: 1rem
+  flex: 1 0
+  border-bottom: 1px dotted #000
+  height: 1rem
+  margin: 0.4em
+
+.flex_columns__item__value
+  @media screen and (max-width: $mobile)
+    width: 50%
 /* Common end */
   
 /* Carousel start */
@@ -1041,3 +1065,145 @@ h6, .h6
   @media screen and (max-width: $mobile)
     width: 100%
 /* Cart epmty end */
+
+/* Text start */
+.text
+  padding: 2rem 1.5rem 6rem
+  font-size: 1.6rem
+  line-height: 130%
+  
+  *
+    max-width: 70rem
+
+  h1
+    font-size: 4rem
+    line-height: 110%
+    padding-bottom: 1.6rem
+
+  h2
+    font-size: 2.8rem
+    line-height: 130%
+    padding-bottom: 1.4rem
+
+  h3
+    font-size: 1.6rem
+    line-height: 130%
+    padding-bottom: 1.2rem
+
+  h4
+    font-size: 1.4rem
+    line-height: 130%
+    padding-bottom: 1rem
+
+  h5
+    font-size: 1.2rem
+    line-height: 100%
+    padding-bottom: .8rem
+
+  h6
+    font-size: 1rem
+    line-height: 100%
+    padding-bottom: .6rem
+
+  p
+    padding-bottom: 1rem
+
+  a
+    color: $pink
+    text-decoration: underline
+    cursor: pointer
+
+    &:hover
+      text-decoration: none
+
+  ol, ul
+    padding: 0 0 2rem 3rem
+    
+    li
+      padding-bottom: 0.5rem    
+
+  ul
+    li
+      list-style-type: disc
+
+  blockquote
+    padding: 1.5rem
+    background-color: $grey3
+    color: $black
+    border-radius: 0.4rem
+
+  summary
+    display: flex
+    justify-content: space-between
+    padding: 2.4rem 0
+    font-size: 1.6rem
+    line-height: 130%
+    font-weight: 500
+    cursor: pointer
+    width: 100%
+
+    &::-webkit-details-marker
+      display: none
+    
+    &::-moz-list-bullet
+      list-style-type: none
+  
+    &::marker
+      display: none
+
+    &:after
+      content: "+"
+      display: inline-block
+      color: $pink
+      font-size: 2rem
+      font-weight: 400
+
+    &:focus
+      outline: 0
+
+  details
+    display: block
+
+    &[open] > summary:after
+      content: "–"
+
+/* Text end */
+
+.account_details
+  padding: 2rem 1.5rem 6rem
+  margin: 0 auto
+  width: 100%
+  max-width: 80rem
+  font-size: 1.6rem
+  line-height: 130%
+
+  h1
+    font-size: 4rem
+    line-height: 110%
+    padding-bottom: 1.6rem
+
+    @media screen and (max-width: $mobile)
+      font-size: 2.8rem
+      line-height: 130%
+      padding-bottom: 4rem
+
+  h2
+    font-size: 2rem
+    line-height: 130%
+    padding-bottom: 1.2rem
+
+    @media screen and (max-width: $mobile)
+      font-size: 1.6rem
+      line-height: 130%
+      padding-bottom: 2rem
+
+  .button
+    margin-top: 4rem
+    display: inline-block
+
+    @media screen and (max-width: $mobile)
+      width: 100%
+      padding: 2rem
+      font-size: 1.6rem
+      line-height: 130%
+      text-align: center
