--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,25 +50,45 @@ h1, .h1
   font-size: 6rem
   line-height: 130%
 
+  @media screen and (max-width: $tablet)
+    font-size: 4rem
+    line-height: 110%
+
 h2, .h2
   font-size: 4rem
   line-height: 110%
+    
+  @media screen and (max-width: $tablet)
+    font-size: 2.8rem
+    line-height: 130%
 
 h3, .h3
   font-size: 2.8rem
   line-height: 130%
 
+  @media screen and (max-width: $tablet)
+    font-size: 1.6rem
+
 h4, .h4
   font-size: 1.6rem
   line-height: 130%
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
 
 h5, .h5
   font-size: 1.4rem
   line-height: 130%
 
+  @media screen and (max-width: $tablet)
+    font-size: 1.2rem
+    line-height: 110%
+
 h6, .h6
   font-size: 1.2rem
-  line-height: 100%
+
+  @media screen and (max-width: $tablet)
+    font-size: 1rem
 
 .desktop--block
   display: block
@@ -108,8 +128,10 @@ h6, .h6
 
 .button
   padding: 1rem 1.8rem
-  border-radius: 0.4rem
-  font-weight: 500
+  display: inline-block
+  width: fit-content
+  border-radius: $radius
+  font-weight: 400
   font-size: 1.4rem
   line-height: 1.8rem
   cursor: pointer
@@ -322,7 +344,7 @@ h6, .h6
   margin: 0 0.2rem
   width: 0.6rem
   height: 0.6rem
-  border-radius: 0.04rem
+  border-radius: $radius
   background-color: $grey3
   cursor: pointer
 
@@ -1162,7 +1184,7 @@ h6, .h6
     padding: 1.5rem
     background-color: $grey3
     color: $black
-    border-radius: 0.4rem
+    border-radius: $radius
 
   summary
     display: flex
@@ -1211,23 +1233,15 @@ h6, .h6
   line-height: 130%
 
   h1
-    font-size: 4rem
-    line-height: 110%
     padding-bottom: 1.6rem
 
     @media screen and (max-width: $mobile)
-      font-size: 2.8rem
-      line-height: 130%
       padding-bottom: 4rem
 
   h2
-    font-size: 2rem
-    line-height: 130%
     padding-bottom: 1.2rem
 
     @media screen and (max-width: $mobile)
-      font-size: 1.6rem
-      line-height: 130%
       padding-bottom: 2rem
 
   .button
@@ -1242,20 +1256,32 @@ h6, .h6
       text-align: center
 /* Реквизиты end */
 
-/* Contacts start */
+/* Contacts&Pickup start */
 .contacts
   padding-top: 2rem
 
   @media screen and (max-width: $tablet)
     padding-top: 1rem
 
-  h1
-    font-size: 4rem
-    line-height: 110%
+.contacts__conditions
+  margin: 4rem 0
+  padding: 1.4rem 2rem
+  max-width: 47rem
+  background-color: $grey1
+  font-size: 1.4rem
+  line-height: 130%
+  color: $black
 
-    @media screen and (max-width: $tablet)
-      font-size: 2.8rem
-      line-height: 130%
+  @media screen and (max-width: $tablet)
+    margin: 2rem 0
+
+.contacts__conditions__text
+  display: block
+  font-weight: 400
+
+.contacts__conditions__accent
+  display: block
+  font-weight: 700
 
 .contacts__info
   padding: 2rem 0 2rem
@@ -1291,28 +1317,22 @@ h6, .h6
 .contacts__info__map
   width: 100%
   height: 68.6rem
-  border-radius: .4rem
+  border-radius: $radius
   overflow: hidden
 
   @media screen and (max-width: $tablet)
     height: 47.7rem
 
 .route
-  padding-top: 6rem
+  margin-top: 6rem
+  margin-bottom: 6rem
 
   @media screen and (max-width: $tablet)
-    padding-top: 4rem
-
-  h2
-    font-size: 2.8rem
-    line-height: 130%
-
-    @media screen and (max-width: $tablet)
-      font-size: 2.2rem
+    margin-top: 4rem
+    margin-bottom: 4rem
 
 .route__details
   margin-top: 4rem
-  margin-bottom: 6rem
   width: 100%
   display: grid
   grid-auto-flow: column dense
@@ -1340,7 +1360,7 @@ h6, .h6
   height: 100%
   width: 100%
   object-fit: cover
-  border-radius: .4rem
+  border-radius: $radius
 
   @media screen and (max-width: $tablet)
     position: relative
@@ -1359,9 +1379,53 @@ h6, .h6
 
 .route__details__step__image
   margin-top: 1rem
-  border-radius: .4rem
+  border-radius: $radius
   width: 100%
 
   @media screen and (max-width: $tablet)
     grid-column: span 2
-/* Contacts end */
+
+.delivery_teaser
+  margin-bottom: 4rem
+  display: flex
+  gap: 1rem
+  width: 100%
+
+  @media screen and (max-width: $tablet)
+    flex-direction: column
+
+.delivery_teaser__banner
+  padding: 11.25rem 4rem
+  display: flex
+  flex-direction: column
+  gap: 4rem
+  width: -webkit-fill-available
+  background-image: url('../images/contacts/delivery_teaser_bg.jpg')
+  background-repeat: no-repeat
+  background-size: cover
+  border-radius: $radius
+  overflow: hidden
+
+  @media screen and (max-width: $tablet)
+    padding: 2rem
+    height: 31.4rem
+    gap: 2rem
+    font-size: 2.8rem
+    background-image: url('../images/contacts/delivery_teaser_bg_mobile.jpg')
+
+.delivery_teaser__banner__heading
+  max-width: 45rem
+  display: inline-block
+  font-weight: 700
+  color: $white
+
+.delivery_teaser__courier
+  max-width: 39.8rem
+  border-radius: $radius
+  overflow: hidden
+
+  @media screen and (max-width: $tablet)
+    max-width: 100%
+    height: 41rem
+    object-fit: cover
+/* Contacts&Pickup end */
