--- a/sass/style.sass
+++ b/sass/style.sass
@@ -69,6 +69,14 @@ h3, .h3
   @media screen and (max-width: $tablet)
     font-size: 1.6rem
 
+.h3-1--pink
+  font-size: 2rem
+  line-height: 130%
+  color: $pink
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.8rem
+
 h4, .h4
   font-size: 1.6rem
   line-height: 130%
@@ -170,6 +178,10 @@ h6, .h6
 .wrapper--global
   max-width: 138rem
   margin: 0 auto
+
+  @media screen and (max-width: $mobile)
+    max-width: 100%
+
   
 .icon--search-white
   background-image: url(../images/icons/search-white.svg)
@@ -1121,7 +1133,7 @@ h6, .h6
 /* Cart epmty end */
 
 /* Text start */
-.text
+.text, .text--center
   padding: 2rem 1.5rem 6rem
   font-size: 1.6rem
   line-height: 130%
@@ -1217,10 +1229,17 @@ h6, .h6
 
   details
     display: block
+    color: $grey-dark2
+
+    summary
+      color: $black
 
     &[open] > summary:after
       content: "–"
 
+.text--center
+  max-width: 80rem
+  margin: 0 auto
 /* Text end */
 
 /* Реквизиты start */
@@ -1429,3 +1448,49 @@ h6, .h6
     height: 41rem
     object-fit: cover
 /* Contacts&Pickup end */
+/* Guarantee start */
+.guarantee
+  margin-top: 6rem
+  margin-bottom: 6rem
+
+  @media screen and (max-width: $mobile)
+    margin-top: 1rem
+    margin-bottom: 4rem
+
+.guarantee__container
+  display: flex !important
+  gap: 1rem
+//   display: grid
+//   grid-template-columns: 1fr 1fr 1fr
+//     grid-template-columns: 1fr
+
+.guarantee__container__tile
+  // display: flex
+  // flex-direction: column
+  // gap: 1rem
+  padding: 2rem
+  text-align: center
+  background-color: $grey1
+  border-radius: $radius
+
+.guarantee__container__tile__image
+  display: block
+  // width: 14.6rem
+  height: 14.6rem
+  // align-self: center
+  margin: 0 auto
+
+.guarantee__container__tile__heading
+  display: block
+  margin-top: 1rem
+  font-size: 2rem
+  font-weight: 700
+  line-height: 2.6rem
+
+.guarantee__container__tile__text
+  display: block
+  font-size: 1.6rem
+  font-weight: 400
+  line-height: 2.1rem
+
+/* Guarantee end */
