--- a/sass/style.sass
+++ b/sass/style.sass
@@ -227,6 +227,15 @@ h6, .h6
   &:hover
     color: $pink
 
+.left
+  text-align: left
+
+.right
+  text-align: right
+
+.center
+  text-align: center
+
 .column__left
   justify-content: left
 
@@ -1460,14 +1469,8 @@ h6, .h6
 .guarantee__container
   display: flex !important
   gap: 1rem
-//   display: grid
-//   grid-template-columns: 1fr 1fr 1fr
-//     grid-template-columns: 1fr
 
 .guarantee__container__tile
-  // display: flex
-  // flex-direction: column
-  // gap: 1rem
   padding: 2rem
   text-align: center
   background-color: $grey1
@@ -1475,9 +1478,7 @@ h6, .h6
 
 .guarantee__container__tile__image
   display: block
-  // width: 14.6rem
   height: 14.6rem
-  // align-self: center
   margin: 0 auto
 
 .guarantee__container__tile__heading
@@ -1492,5 +1493,114 @@ h6, .h6
   font-size: 1.6rem
   font-weight: 400
   line-height: 2.1rem
-
 /* Guarantee end */
+
+/* About start */
+.about_heading
+  margin-bottom: 6rem
+
+.about_utp
+  margin-bottom: 1rem
+
+  @media screen and (max-width: $mobile)
+    margin-top: 1rem
+    margin-bottom: 4rem
+    padding-right: 0
+
+.about_utp__container
+  display: flex !important
+  gap: 1rem
+
+.about_utp__container__tile
+  padding: 2rem
+  text-align: center
+  background-color: $grey1
+  border-radius: $radius
+
+.about_utp__container__tile__image
+  display: block
+  height: 14.6rem
+  margin: 0 auto
+
+.about_utp__container__tile__heading
+  display: block
+  margin-top: 1rem
+  font-size: 2rem
+  font-weight: 700
+  line-height: 2.6rem
+
+.about_utp__container__tile__text
+  display: block
+  font-size: 1.6rem
+  font-weight: 400
+  line-height: 2.1rem
+  
+.about_hero
+  padding-top: 2rem
+  padding-bottom: 6rem
+  text-align: center
+  
+  @media screen and (max-width: $tablet)
+    padding-bottom: 4rem
+
+.about_hero__image
+  width: 65.9rem
+  height: 46rem
+  max-width: 100%
+
+.about_promo
+  margin-bottom: 1rem
+  display: grid
+  grid-template-columns: 1fr 1fr
+  gap: 2rem
+
+  @media screen and (max-width: $tablet)
+    display: flex
+    flex-direction: column-reverse
+    grid-template-columns: unset
+    gap: .5rem
+
+.about_promo__image
+  border-radius: $radius
+  overflow: hidden
+  background-image: url('../images/about/banner-discounts.svg')
+  background-position: bottom left
+  background-repeat: no-repeat
+  background-size: contain
+
+  @media screen and (max-width: $tablet)
+    height: 23rem
+
+.about_promo__message
+  padding: 4rem 2rem
+
+  p
+    margin-bottom: 1rem
+
+.about_promo__message__heading
+  margin-bottom: 2rem
+  display: inline-block
+
+.about_promo__message__button
+  margin-top: 2rem
+  text-align: center
+
+  @media screen and (max-width: $tablet)
+    width: 100%
+    padding: 2rem 0
+    font-size: 1.6rem
+    line-height: 130%
+    font-weight: 500
+
+.about_gallery
+  margin-bottom: 7rem
+  display: grid
+  grid-template-columns: 1fr 1fr
+  gap: 1rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
+.about_gallery__image
+  max-width: 100%
+/* About end */
